--- a/local/lib/perl5/i686-linux/perllocal.pod
+++ b/local/lib/perl5/i686-linux/perllocal.pod
@@ -2066,3 +2066,47 @@ C<EXE_FILES: >
 
 =back
 
+=head2 Sun Jan  5 18:55:35 2014: C<Module> L<Digest::HMAC|Digest::HMAC>
+
+=over 4
+
+=item *
+
+C<installed into: /opt/phormat/local/lib/perl5>
+
+=item *
+
+C<LINKTYPE: dynamic>
+
+=item *
+
+C<VERSION: 1.03>
+
+=item *
+
+C<EXE_FILES: >
+
+=back
+
+=head2 Sun Jan  5 18:55:38 2014: C<Module> L<Digest::SHA1|Digest::SHA1>
+
+=over 4
+
+=item *
+
+C<installed into: /opt/phormat/local/lib/perl5>
+
+=item *
+
+C<LINKTYPE: dynamic>
+
+=item *
+
+C<VERSION: 2.13>
+
+=item *
+
+C<EXE_FILES: >
+
+=back
+
